# TNN_LITE

./: CMakeLists.txt  README.md  build_linux.sh
example/: CMakeLists.txt  TNNImageClassify.cc
example/base/: tnn_sdk_sample.h
examples/linux/src/TNNObjectDetector/: TNNObjectDetector.cc
examples/linux/x86/: CMakeLists.txt  run_x86_imageclassify.sh
